# world-model-harness

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  conftest.py  pyproject.toml
environment-capture/: README.md  pyproject.toml
environment-capture/bird-sql/: README.md  capture.py  fetch_data.py  traces.otel.jsonl
environment-capture/bird-sql/data/: test.jsonl  train.jsonl
environment-capture/bird-sql/gold/: bird-test-0.json  bird-test-1.json  bird-test-10.json  bird-test-11.json  bird-test-12.json  bird-test-13.json  bird-test-14.json  bird-test-15.json  bird-test-16.json  bird-test-17.json  bird-test-18.json  bird-test-19.json  bird-test-2.json  bird-test-3.json  bird-test-4.json  bird-test-5.json  bird-test-6.json  bird-test-7.json  bird-test-8.json  bird-test-9.json  bird-train-0.json  bird-train-1.json  bird-train-10.json  bird-train-11.json  bird-train-12.json  bird-train-13.json  bird-train-14.json  bird-train-15.json  bird-train-16.json  bird-train-17.json  bird-train-18.json  bird-train-19.json  bird-train-2.json  bird-train-20.json  bird-train-21.json  bird-train-22.json  bird-train-23.json  bird-train-24.json  bird-train-25.json  bird-train-26.json  (+32 more)
environment-capture/bird-sql/schemas/: california_schools.sql  student_club.sql  toxicology.sql
environment-capture/continual-learning/: README.md  capture.py  convert_cache.py  fetch_data.py  traces.otel.jsonl
environment-capture/continual-learning/data/: test.jsonl  train.jsonl
environment-capture/continual-learning/gold/: clb-test-101.json  clb-test-102.json  clb-test-103.json  clb-test-104.json  clb-test-105.json  clb-test-106.json  clb-test-107.json  clb-test-108.json  clb-test-109.json  clb-test-110.json  clb-test-111.json  clb-test-113.json  clb-test-114.json  clb-test-115.json  clb-test-116.json  clb-test-117.json  clb-test-118.json  clb-test-119.json  clb-test-120.json  clb-test-26.json  clb-test-27.json  clb-test-28.json  clb-test-29.json  clb-test-30.json  clb-train-1.json  clb-train-10.json  clb-train-11.json  clb-train-12.json  clb-train-13.json  clb-train-14.json  clb-train-15.json  clb-train-16.json  clb-train-17.json  clb-train-18.json  clb-train-19.json  clb-train-2.json  clb-train-20.json  clb-train-21.json  clb-train-22.json  clb-train-23.json  (+9 more)
environment-capture/dabstep/: README.md  capture.py  convert_cache.py  fetch_data.py  traces.otel.jsonl
environment-capture/dabstep/data/: test.jsonl  train.jsonl
environment-capture/dabstep/gold/: dab-test-0.json  dab-test-1.json  dab-test-2.json  dab-test-3.json  dab-test-4.json  dab-train-0.json  dab-train-1.json  dab-train-2.json  dab-train-3.json  dab-train-4.json
environment-capture/environment_capture/: __init__.py  adapter.py  adapter_test.py  agent.py  agent_test.py  baseline_cache.py  baseline_cache_test.py  hygiene.py  hygiene_test.py  localexec.py  localexec_test.py  otel_wmh_roundtrip_test.py  sib_cache.py  sib_cache_test.py
environment-capture/environment_capture/benchmarks/: bird_sql.py  bird_sql_test.py  continual_learning.py  continual_learning_test.py  dabstep.py  financebench.py  (+1 more)
environment-capture/financebench/: README.md  capture.py  convert_cache.py  traces.otel.jsonl  wm_replace_demo.py
(+634 files in other folders)
